--- a/Assignment2.html
+++ b/Assignment2.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+
+<div class=header>
+<h1>Traditional Clothing Around the World </h1>
+<p1>Let's explore some of the parts of the world</p1>
+<a
+href=”html/Home.html”>Home </a>
+<a
+href=”html/Asia.html”>Asia</a>
+<a
+href=”html/Europe.html”>Europe</a>
+<a
+</div>
+<div class=”About”>
+<h2>About this</h2>
+<p2>Traditional clothing is very </p2>
+</div>
+
+Asia
+<div class=header>
+<h1> Asia </h1>a</a>
+<a
+href=”html/Home.html”>Home </a>
+<a
+href=”html/Asia.html”>Asia
+</a>
+href=”html/Europe.html”>Europe</a>
+</div>
+
+Europe
+
+<div class=header>
+<h1> Europe </h1>a</a>
+<a
+href=”html/Home.html”>Home </a>
+<a
+href=”html/Asia.html”>Asia
+</a>
+href=”html/Europe.html”>Europe</a>
+</div>
+<div class=”Topics”>
+<p1>Let's look at some traditional clothing</p1>
+</div>
+
+<div class=”Picture 1”>
+<img src=https://www.culturalatina.at/media/k2/items/cache/ca332973fc363da77aefed58534dcd5c_XL.jpg
+</div>
+<div class=”Germany”>
+<h2>Tracht</h2>
+</div>
+<div class=”Paragraph Germany”>
+<p2> Tracht are traditional clothing </p2>
+</div>
 
