--- a/asia.html
+++ b/asia.html
@@ -14,8 +14,39 @@
     </nav>
 
     <header>
-       
+       <h1>Asia</h1>
     </header>
+<section class="topics">
+    <p1>
+       Let's look at some traditional clothing!
+    </p1>
+</section>
+<div class="picture-1">
+    <img src="https://imgcp.aacdn.jp/img-a/1200/auto/global-aaj-front/article/2017/02/58a845d9eaf84_58a84108c3327_100072194.jpg"alt="div" class="rounded"
+    >
+</div>
+<div class="japan">
+    <h2>Japan-Kimono</h2>
+</div>
+<div class="paragraphJapan">
+    <p2>Kimonos are worn by both men, women and children. These were mainly worn during the 17th century and were even 
+        used as self expression. They are still worn today for festivials, events, and even marriage. 
+    </p2>
+</div>
+<div class="picture-2">
+ <img src="https://www.indochinatour.com/assets/images/laos-myanmar-vietnam-cambodia/new-style-Ao-Dai.jpg"alt="div" class="rounded">
+</div>
+<div class="Vietnam">
+    <h2> Vietnam-Ao Dai
+    </h2>
+    </div>
+    <div class="paragraphVietnam">
+        <p2> The Ao Dai is a symbol of beauty and can be worn by people of all ages.These can be worn at special
+            photoshoots, ocassions, school events, The traditional clothing was made from several pieces of cloth that is sewn together in flaps
+            to make make the front and back of the lower part of the long garment, which appeared to make the garment split down the sides, a
+             feature that has been preserved in the modern version of the Ao Dai.
 
-
+        </p2>
+    </div>
+</div>
 </html>
