--- a/europe.html
+++ b/europe.html
@@ -18,18 +18,33 @@
     </header>
 
     <section class=”topics”>
-        <p1>Let's look at some traditional clothing</p1>
+        <p1>Let's look at some traditional clothing!</p1>
     </section>
 
     <div class=”picture-1”>
-        <img src=https://www.culturalatina.at/media/k2/items/cache/ca332973fc363da77aefed58534dcd5c_XL.jpg>
+        <img src="https://www.culturalatina.at/media/k2/items/cache/ca332973fc363da77aefed58534dcd5c_XL.jpg"alt="div" class="rounded">
     </div>
 
     <div class=”germany”>
-        <h2>Tracht</h2>
+        <h2>Germany-Tracht-Dirdndls-Lederhosen</h2>
     </div>
     <div class=”paragraphGermany”>
-        <p2> Tracht are traditional clothing </p2>
+        <p2> Tracht is a way of dressing with a particular group of people which is worn by men.Lederhosen is short
+            or knee-length leather breeches which is traditional garments.
+             Dirdndls are a feminine dress worn by women and was issued by Nazis as pan-German idenity. 
+             </p2>
     </div>
-
+    <div class="picture-2">
+        <img src="https://i.pinimg.com/originals/84/b3/51/84b3514c4f099f6e0c09b12efc066f84.jpg"alt="div" class="rounded" >
+    </div>
+<div class="france">
+    <h2>France-Coiffe</h2>
+    </div>
+    <div class="paragraphFrance">
+        <p2>In Brittany france women wear a coiffe, which a lace headress and seen in
+            local festivials or pardons. Some coiffes can be tall as 30-40cm tall.
+        </p2>
+    </div>
+    
+</div>
 </html>
