--- a/index.html
+++ b/index.html
@@ -13,15 +13,36 @@
         <a href="index.html">Home </a>
         <a href= "asia.html">Asia</a>
         <a href="europe.html">Europe</a>
+        
     </nav>
 
     <header>
         <h1>Traditional Clothing Around the World </h1>
-        <p1>Let's explore some of the parts of the world</p1>
+        <p1>Let's explore some of the parts of the world, through these 
+            links.</p1>
     </header>
     <section class=”About”>
-        <h2>About this</h2>
-        <p2>Traditional clothing is very </p2>
+        <h2>Exploring Around The World</h2>
+        <p2>Traditional clothing is when people expresses an identity through a collection of 
+            garments, jewelery, acessories rooted in cultural roots of a identifiable group of people.
+        It can generally be associated with a geographic area, or a period of time in history. some
+    clothes can be an indication of social, martial or religious status. </p2>
     </section>
+    <div class="Kazakhstan">
+        <img src="https://www.orexca.com/img/kazakhstan/traditions/kazakh-national-dress4.jpg"alt="div" class="rounded" >
+    </div>
+<div class="Kahazkhstan">
+    <h2>Kahazhstan-Chapans</h2>
+
+</div>
+<div class="paragraphKahazkhstan">
+    <p2>Kazakhstan which is a Central Asian country and former Soviet republic, 
+        extends from the Caspian Sea in the west to the Altai Mountains
+         at its eastern border with China and Russia.
+         A staple article of Kazakh clothing is the chapan or shapan, a long, loose robe.
+          Unlike other clothing, it is not gender-specific and is worn by men and women. 
+          Chapans are made from various fabrics and are available in a range of colors 
+         (most often monochrome or dark). They are lined with a layer of wool or cotton. </p2>
+</div>
 
 </html>
